<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/EstiloTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_detalle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion_ruta"
        android:textSize="16sp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duracion_ruta"
        android:textSize="14sp"
        android:layout_marginTop="8dp"/>

    <Button
        style="@style/EstiloBoton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/compartir_ruta" />

</LinearLayout>